update forgot password page

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -9,7 +9,7 @@
   "VERSION"            : "Version",
   "USER"               : "User",
   "EMAIL"              : "E-mail",
-  "FORGOT_YOUR_PWD"    : "Forgot your password?",
+  "FORGOT_YOUR_PWD"    : "Forget your password?",
   "BACK_TO_LOGIN"      : "Back to login",
   "VALIDATE_ACCOUNT"   : "Validate the account",
   "VALIDATE"           : "Validate",
